clusters/dev/istio/wildcard-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: wildcard-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress-private
  servers:
    - hosts:
        # - links.${cluster_subdomain}
        - grafana.${cluster_subdomain}
        - vmagent.${cluster_subdomain}
        - vmalert.${cluster_subdomain}
        - vmalertmanager.${cluster_subdomain}
        - vmsingle.${cluster_subdomain}
        - jenkins.${cluster_subdomain}
        # - argocd.${cluster_subdomain}
        # - pgadmin.${cluster_subdomain}
        # - airflow.${cluster_subdomain}
        # - capacitor.${cluster_subdomain}
        # - minio-loki.${cluster_subdomain}
        - httpbin.${cluster_subdomain}
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        # - links.${cluster_subdomain}
        - grafana.${cluster_subdomain}
        - vmagent.${cluster_subdomain}
        - vmalert.${cluster_subdomain}
        - vmalertmanager.${cluster_subdomain}
        - vmsingle.${cluster_subdomain}
        - jenkins.${cluster_subdomain}
        # - argocd.${cluster_subdomain}
        # - pgadmin.${cluster_subdomain}
        # - airflow.${cluster_subdomain}
        # - capacitor.${cluster_subdomain}
        # - minio-loki.${cluster_subdomain}
        - httpbin.${cluster_subdomain}
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        # certificate provided by https://get.localhost.direct/
        credentialName: localhost-direct
        mode: SIMPLE
